--- a/settings.json
+++ b/settings.json
@@ -6,8 +6,8 @@
   },
 
   "server": {
-    "ip": "Tyrox_x.aternos.me", 
-    "port": 48211,   
+    "ip": "seif59632185.aternos.me", 
+    "port": 61667,   
     "version": "1.12.1"   
   },
 
